# LLMAPPS

./: README.md  pyproject.toml  test.ipynb
app/: chat_app.py  web_summary_app.py
docker/: compose.yaml  dockerfile
